--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
 
 <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-firestore.js"></script>
+<script src="https://d3js.org/d3.v4.js"></script> 
+
 </head>
 
 <body>
